# yua-t16

./: .gitignore  README.md
docs/: blog_post_ko.md  openmpw_prep.md  synthesis_report.md
driver/: Kconfig  Makefile  orbit_g1.h  orbit_g1_chardev.c  orbit_g1_mem.c  orbit_g1_pci.c  orbit_g1_queue.c
fpga/vck190/: create_cpm_ip.tcl  create_project.tcl  install_vivado.sh  vck190_pcie.xdc
include/uapi/: orbit_g1_uapi.h
openlane/gemm_int4/: config.json
openlane/gemm_wb/: config.json
openlane/gemm_wb/src/: gemm_int4_sky130.v
rtl/: act_sram.sv  backward_engine.sv  cdc_fifo.sv  collective_engine.sv  ctrl_fsm.sv  desc_fsm_v2.sv  desc_queue.sv  dma_bridge.sv  g2_ctrl_top.sv  g2_protob_top.sv  g3_2chip_fabric_int_top.sv  g3_2chip_int_top.sv  g3_asic_top.sv  g3_ctrl_top.sv  g3_desc_fsm.sv  g3_int_top.sv  g3_multistep_int_top.sv  g3_train_int_top.sv  gemm_core.sv  gemm_int4.sv  gemm_int4_fpga.sv  gemm_int4_synth.sv  gemm_stub.sv  gemm_top.sv  gemm_wb_wrapper.v  irq_ctrl.sv  kvc_core.sv  loss_scaler.sv  mac_array.sv  mac_pe.sv  moe_router.sv  mxu_bf16_128x128.sv  mxu_bf16_16x16.sv  oom_guard.sv  optimizer_unit.sv  pcie_ep_versal.sv  reg_top.sv  reset_seq.sv  scale_fabric_ctrl.sv  trace_ring.sv  (+6 more)
rtl/synth/: constraints.xdc  vivado_synth.tcl
runtime/: CMakeLists.txt
runtime/cmake/: orbitConfig.cmake.in
runtime/include/: orbit.h
runtime/lib/: descriptor_queue.cpp  device.cpp  executor.cpp  kvc_manager.cpp  memory_pool.cpp  session.cpp  weight_loader.cpp
runtime/server/: CMakeLists.txt  completions_handler.cpp  completions_handler.h  config.h  http_server.cpp  http_server.h  main.cpp  session_manager.cpp  session_manager.h  tokenizer.cpp  tokenizer.h
runtime/tests/: test_basic.cpp
scripts/: constraints.xdc  run_openlane.sh  vck190_first_smoke.py  vivado_synth.tcl
sim/cocotb/: dma_stub.py  run_gemm_int4.py  run_gemm_top.py  run_kvc.py  run_mac_array.py  run_moe.py  run_vpu.py  run_vpu_synth.py  test_gemm_int4.py  test_gemm_top.py  test_kvc.py  test_mac_array.py  test_moe.py  test_vpu.py  test_vpu_synth.py
sim/golden/: executor.py  memory.py  ops.py  pack.py
sim/integration/: test_llm_forward.py
spec/: descriptor.md  driver-runtime-design.md  kvc.md  nova-torch-contract.md  orbit-g1.md  vpu.md  yua-llm-hw-design.md  yua-t16-v2.md  yua-t16.md
tb/: dma_responder.py  results.xml  tb_backward_engine.py  tb_cdc_fifo_async.py  tb_cdc_fifo_reset.py  tb_collective_engine.py  tb_desc_fsm_v2.py  tb_desc_fsm_v2_timeout.py  tb_desc_queue_backpressure.py  tb_desc_queue_basic.py  tb_g2_ctrl_top_bootcause.py  tb_g2_ctrl_top_dma_shim.py  tb_g2_ctrl_top_host_e2e.py  tb_g2_ctrl_top_multiqueue.py  tb_g2_ctrl_top_oom.py  tb_g2_ctrl_top_perf.py  tb_g2_ctrl_top_smoke.py  tb_g2_ctrl_top_tc_status.py  tb_g2_ctrl_top_trace_dump.py  tb_g3_desc_fsm.py  tb_g3_int_2chip_allreduce.py  tb_g3_int_2chip_fabric.py  tb_g3_int_gemm_e2e.py  tb_g3_int_multistep_loop.py  tb_g3_int_single_layer.py  tb_irq_ctrl_basic.py  tb_irq_ctrl_w1c.py  tb_loss_scaler.py  tb_mxu_bf16_128x128.py  tb_mxu_bf16_16x16.py  tb_oom_guard_race.py  tb_oom_guard_thresholds.py  tb_optimizer_unit.py  tb_reg_top_rw.py  tb_reset_seq_order.py  tb_scale_fabric_ctrl.py  tb_trace_ring_freeze.py  tb_trace_ring_wrap.py
tests/: test_desc_pack.py  test_g3_asic_top_contract.py  test_linux_pci_bar_opener.py  test_mmap_backend.py  test_mmap_backend_real_integration.py  test_mmio_map.py  test_orbit_bringup.py  test_orbit_device_api.py  test_orbit_dma.py  test_orbit_scheduler.py  test_protoa_debug_flow.py  test_protob_gap_contract.py  test_protob_mock_flow.py  test_protob_shell_contract.py  test_real_bar_mmap.py  test_trace_decode.py  test_vck190_build_contract.py  test_vck190_pcie_contract.py
tools/: __init__.py  orbit_backend.py  orbit_bringup.py  orbit_cocotb_backend.py  orbit_debug_protoa.py  orbit_desc.py  orbit_device.py  orbit_dma.py  orbit_mmap_backend.py  orbit_mmio_map.py  orbit_poll.py  orbit_protob_mock.py  orbit_scheduler.py  orbit_session.py  orbit_trace.py
